<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/cat_status">
        <Preference
            app:key="status"
            app:selectable="false"
            app:title="@string/status_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_triggers">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="trigger_calls"
            app:summary="@string/trigger_calls_summary"
            app:title="@string/trigger_calls_title" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="trigger_notifications"
            app:summary="@string/trigger_notifications_summary"
            app:title="@string/trigger_notifications_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_vibration">
        <ListPreference
            app:defaultValue="double"
            app:entries="@array/pattern_entries"
            app:entryValues="@array/pattern_values"
            app:key="pattern_calls"
            app:title="@string/pattern_calls_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="short"
            app:entries="@array/pattern_entries"
            app:entryValues="@array/pattern_values"
            app:key="pattern_notifications"
            app:title="@string/pattern_notifications_title"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            android:max="6"
            app:defaultValue="3"
            app:key="calls_repeat"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/calls_repeat_summary"
            app:title="@string/calls_repeat_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_filter">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="filter_ongoing"
            app:summary="@string/filter_ongoing_summary"
            app:title="@string/filter_ongoing_title" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="filter_low"
            app:summary="@string/filter_low_summary"
            app:title="@string/filter_low_title" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="filter_group_summary"
            app:summary="@string/filter_group_summary_summary"
            app:title="@string/filter_group_summary_title" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="only_screen_off"
            app:summary="@string/only_screen_off_summary"
            app:title="@string/only_screen_off_title" />
        <EditTextPreference
            app:key="app_allowlist"
            app:summary="@string/allowlist_summary"
            app:title="@string/allowlist_title" />
        <EditTextPreference
            app:key="app_blocklist"
            app:summary="@string/blocklist_summary"
            app:title="@string/blocklist_title" />
        <SeekBarPreference
            android:max="10000"
            app:defaultValue="1500"
            app:key="cooldown_ms"
            app:min="0"
            app:seekBarIncrement="250"
            app:showSeekBarValue="true"
            app:summary="@string/cooldown_summary"
            app:title="@string/cooldown_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_integration">
        <EditTextPreference
            app:defaultValue="com.gdjztech.ringconn"
            app:key="ringconn_package"
            app:summary="@string/ringconn_package_summary"
            app:title="@string/ringconn_package_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="vibrate"
            app:entries="@array/command_entries"
            app:entryValues="@array/command_values"
            app:key="command_source"
            app:title="@string/command_source_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0B 03 01 64 00"
            app:key="vibrate_cmd_hex"
            app:summary="@string/vibrate_cmd_summary"
            app:title="@string/vibrate_cmd_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="8327ad99-2d87-4a22-a8ce-6dd7971c0437"
            app:key="write_service_uuid"
            app:title="@string/write_service_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="8327ad98-2d87-4a22-a8ce-6dd7971c0437"
            app:key="write_char_uuid"
            app:title="@string/write_char_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_test">
        <Preference
            app:key="test_vibrate"
            app:summary="@string/test_vibrate_summary"
            app:title="@string/test_vibrate_title" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="debug_logging"
            app:summary="@string/debug_logging_summary"
            app:title="@string/debug_logging_title" />
    </PreferenceCategory>

</PreferenceScreen>
